# collate_backend

./: README.md  pyproject.toml
collate_backend/scrapers/: amazon_scrape.py  scrape_functions.py
tests/test_scrapers/: test_scrape_functions.py
