[tool.poetry]
name = "collate_backend"
version = "0.1.0"
description = ""
authors = ["Tomi Adenekan <tominekan@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
gazpacho = "^1.1"
pytest = "^7.1.3"
Faker = "^14.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
